- Implemented running one stage until velocity is consumed or no more work can be pulled from the ready work provider. - Implemented running a single day (run each stage serially).

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		<script type="text/javascript" src="javascripts/ext/icanhaz.js"></script>
 
 		<script type="text/javascript" src="javascripts/app/WorkItem.js"></script>
-		<script type="text/javascript" src="javascripts/app/ReadyWorkSource.js"></script>
+		<script type="text/javascript" src="javascripts/app/ReadyWorkProvider.js"></script>
 		<script type="text/javascript" src="javascripts/app/Backlog.js"></script>
 		<script type="text/javascript" src="javascripts/app/Stage.js"></script>
 		<script type="text/javascript" src="javascripts/app/Board.js"></script>
@@ -58,7 +58,7 @@
 		</script>
 
 		<script id="control-panel-template" type="text/template">
-			<!--<button id="run-one-day">Run one day</button>-->
+			<button id="run-one-day">Run one day</button>
 		</script>
 
 		<link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" charset="utf-8">
