Extra RunOneDayReversed button. This will reverse the stage list before running them one at a time. This way workitems can pass one stage per day maximal. This simulates the seriallity of the work better.

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
 
 		<script id="control-panel-template" type="text/template">
 			<button id="run-one-day">Run one day</button>
+      <button id="run-one-day-reversed">Run one day reversed</button>
 		</script>
 
 		<link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" charset="utf-8">
