--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Flowmulator</title>
@@ -50,7 +51,8 @@
     <script id="stage-template" type="text/template">
       <div class="stage-header">
         <h3><%= stage.get('name') %> (<%= stage.get('velocity') %>)</h3>
-        <h5>WIP limit: <%= stage.get('wipLimit') %></h5>
+        <label for="wip-limit-<%= stage.get('name') %>">WIP limit:</label>
+        <input id="wip-limit-<%= stage.get('name') %>" class="wip-limit" type="number" value="<%= stage.get('wipLimit') %>" min="1" max="99" />
       </div>
 
       <div class="row-fluid">
