--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
 
     <script id="control-panel-template" type="text/template">
       <div class="span12">
-        <button id="run-one-day" class="btn">Run one day</button>
-        <button id="run-one-day-reversed" class="btn">Run one day reversed</button>
+        <button id="run-ten-days" class="btn">Run 10 days</button>
+        <button id="run-one-day" class="btn">Run 1 day</button>
       </div>
     </script>
 
