Restart button and wiplimit is also for ready items

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       <div class="span12">
         <button id="run-ten-days" class="btn">Run 10 days</button>
         <button id="run-one-day" class="btn">Run 1 day</button>
+        <button id="restart" class="btn">RESTART</button>
       </div>
     </script>
 
