--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Flowmulator</title>
 
-	        <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css" media="screen" charset="utf-8">
-                <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" charset="utf-8">
+	  <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" charset="utf-8">
 
 		<script type="text/javascript" src="javascripts/ext/underscore.js"></script>
 		<script type="text/javascript" src="javascripts/ext/jquery-1.7.1.js"></script>
@@ -29,6 +29,7 @@
         <button id="run-ten-days" class="btn">Run 10 days</button>
         <button id="run-one-day" class="btn">Run 1 day</button>
         <button id="restart" class="btn">RESTART</button>
+        <h4>Average time to complete workItems: </h4>
       </div>
     </script>
 
@@ -50,8 +51,9 @@
         <h3><%= stage.get('name') %> (<%= stage.get('velocity') %>)</h3>
         <label for="wip-limit-<%= stage.get('name') %>">WIP limit:</label>
         <input id="wip-limit-<%= stage.get('name') %>" class="wip-limit" type="number" value="<%= stage.get('wipLimit') %>" min="1" max="99" />
+        <label for="number-of-people-<%= stage.get('name') %>">People:</label>
+        <input id="number-of-people-<%= stage.get('name') %>" class="number-of-people" type="number" value="<%= stage.get('numberOfPeople') %>" min="1" max="5" />
       </div>
-
       <div class="row-fluid">
         <div class="span6">
           <h4>Doing</h4>
