--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <div class="span12">
         <h4>Average work time: <%= metrics.get("averageWorkTime") %></h4>
         <h4>Average wait time: <%= metrics.get("averageWaitTime") %></h4>
-        <h4>Days passed: <%= metrics.get("daysPassed") %></h4>
+        <h4>Days passed when all work was done: <%= metrics.get("daysPassed") %></h4>
 
       </div>
     </script>
