--- a/public/index.html
+++ b/public/index.html
@@ -91,8 +91,17 @@
         <div>Waitdays: <%= workItem.get('waitTime') %></div>
         <div>Total: <%= workItem.get('workTime') + workItem.get('waitTime') %></div>
       </div>
-		</script>
-
+     </script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	
+	  ga('create', 'UA-40789144-1', 'github.io');
+	  ga('send', 'pageview');
+	
+	</script>
 	</head>
 	<body>
 		<div id="container" class="container-fluid"></div>
